// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Category page > mounts without error 1`] = `
"<div class=\\"container\\">
  <ol class=\\"breadcrumb\\">
    <li class=\\"breadcrumb-item\\"><a aria-current=\\"page\\" href=\\"#/\\" class=\\"router-link-active router-link-exact-active\\">Categories</a></li>
    <li class=\\"breadcrumb-item active text-capitalize\\">General-Products</li>
  </ol>
  <h1>Products in category General-Products</h1>
  <!--v-if-->
  <div class=\\"d-flex flex-row flex-wrap\\"></div>
</div>"
`;

exports[`Category page > mounts without error 2`] = `
"<div class=\\"container\\">
  <ol class=\\"breadcrumb\\">
    <li class=\\"breadcrumb-item\\"><a aria-current=\\"page\\" href=\\"#/\\" class=\\"router-link-active router-link-exact-active\\">Categories</a></li>
    <li class=\\"breadcrumb-item active text-capitalize\\">General-Products</li>
  </ol>
  <h1>Products in category General-Products</h1>
  <!--v-if-->
  <div class=\\"d-flex flex-row flex-wrap\\">
    <div data-v-2606fbc7=\\"\\" class=\\"card pointer hover-up mb-2 me-2\\" style=\\"width: 18rem;\\" data-testid=\\"product-preview-101\\"><img data-v-2606fbc7=\\"\\" class=\\"card-img-top\\" alt=\\"preview\\">
      <div data-v-2606fbc7=\\"\\" class=\\"card-body\\">
        <h5 data-v-2606fbc7=\\"\\" class=\\"card-title\\">product-1</h5>
        <p data-v-2606fbc7=\\"\\" class=\\"card-text\\">Lorem ipsum 1</p><span data-v-2606fbc7=\\"\\" class=\\"float-end badge rounded-pill fs-5 bg-primary mt-3 me-3\\"> $100</span>
      </div>
    </div>
    <div data-v-2606fbc7=\\"\\" class=\\"card pointer hover-up mb-2 me-2\\" style=\\"width: 18rem;\\" data-testid=\\"product-preview-102\\"><img data-v-2606fbc7=\\"\\" class=\\"card-img-top\\" alt=\\"preview\\">
      <div data-v-2606fbc7=\\"\\" class=\\"card-body\\">
        <h5 data-v-2606fbc7=\\"\\" class=\\"card-title\\">product-2</h5>
        <p data-v-2606fbc7=\\"\\" class=\\"card-text\\">Lorem ipsum 2</p><span data-v-2606fbc7=\\"\\" class=\\"float-end badge rounded-pill fs-5 bg-primary mt-3 me-3\\"> $200</span>
      </div>
    </div>
    <div data-v-2606fbc7=\\"\\" class=\\"card pointer hover-up mb-2 me-2\\" style=\\"width: 18rem;\\" data-testid=\\"product-preview-103\\"><img data-v-2606fbc7=\\"\\" class=\\"card-img-top\\" alt=\\"preview\\">
      <div data-v-2606fbc7=\\"\\" class=\\"card-body\\">
        <h5 data-v-2606fbc7=\\"\\" class=\\"card-title\\">product-3</h5>
        <p data-v-2606fbc7=\\"\\" class=\\"card-text\\">Lorem ipsum 3</p><span data-v-2606fbc7=\\"\\" class=\\"float-end badge rounded-pill fs-5 bg-primary mt-3 me-3\\"> $300</span>
      </div>
    </div>
  </div>
</div>"
`;
